--- a/SCM/contest/MDK-ARM/contest.uvprojx
+++ b/SCM/contest/MDK-ARM/contest.uvprojx
@@ -1007,6 +1007,16 @@
               <FileType>5</FileType>
               <FilePath>..\Hardware\mymain.h</FilePath>
             </File>
+            <File>
+              <FileName>mpu6050.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\Hardware\mpu6050.c</FilePath>
+            </File>
+            <File>
+              <FileName>mpu6050.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>..\Hardware\mpu6050.h</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
